# 2021Wanxiang-Blockchain-Hackathon-Crazyball

./: README.md
contracts/: .gitignore
contracts/market/src/: sale.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
contracts/reward/: Cargo.toml  build.sh
contracts/reward/src/: lib.rs
contracts/store/: build.sh
contracts/store/src/: lib.rs
front/: README.md  cocos2d-js-min.js  creator.d.ts  index.html  jsconfig.json  project.json  tsconfig.json  typings.d.ts
front/assets/: game.fire  main.fire  pack.fire  store.fire
front/assets/libs/: near-api-js.js
front/assets/main/: config.json  index.js
front/assets/main/import/08/: 08d79dc30.json
front/assets/main/import/0e/: 0e714d509.json
front/assets/resources/: config.json
front/assets/resources/prefab/: gameBaseLayout.prefab  gameFucBox.prefab  loadingBox.prefab  packFuc.prefab  packListBox.prefab  packSellListBox.prefab  storeListBox.prefab  storePay.prefab
front/assets/src/common/: util.ts
front/assets/src/game/: GameConst.ts  GameView.ts  MainView.ts  Over.ts  PackItem.ts  PackView.ts  StoreItem.ts  StorePay.ts  StoreView.ts
front/local/: layout.editor.json  local.json  node-tree-state.json
front/settings/: builder.json  project.json
front/src/: settings.js
front/temp/: startup.json
front/temp/BackupAssets/assets/: ceshi.fire  game.fire  game2.fire  main.fire  menu.fire  pack.fire  store.fire
front/temp/quick-scripts/dst/: __file_stats__.json  __qc_bundle__.js  __qc_index__.js  __quick_compile__.js
front/temp/quick-scripts/src/: __qc_index__.js
(+149 files in other folders)
